[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "httpx2_kerberos"
description = "Kerberos authentication for HTTPX2 (forked from HTTPX-Kerberos)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Andrew C", email = "achapkowski@esri.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "cryptography>=46.0.0",
    "httpx2>=2.2.0,<3.0.0",
    "pyspnego>=0.12.1; sys_platform == 'win32'",
    "pyspnego[kerberos]>=0.12.1; sys_platform != 'win32'",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx>=7.2",
]


[project.urls]
Homepage = "https://github.com/achapkowski/httpx2_kerberos"
Source = "https://github.com/achapkowski/httpx2_kerberos"
Documentation = "https://achapkowski.github.io/httpx2_kerberos/"

[tool.setuptools.dynamic]
version = { attr = "httpx2_kerberos.__version__.__version__" }
